# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/api/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "Аутентифицирует пользователя и возвращает access и refresh токены",
                 "consumes": [
@@ -61,7 +61,7 @@
                 }
             }
         },
-        "/api/auth/logout": {
+        "/auth/logout": {
             "post": {
                 "description": "Выходит пользователя и отзывает refresh токен",
                 "consumes": [
@@ -113,7 +113,7 @@
                 }
             }
         },
-        "/api/auth/refresh": {
+        "/auth/refresh": {
             "post": {
                 "description": "Обновляет access и refresh токены по старому refresh токену",
                 "consumes": [
@@ -165,7 +165,7 @@
                 }
             }
         },
-        "/api/auth/validate": {
+        "/auth/validate": {
             "post": {
                 "description": "Проверяет валидность предоставленного токена",
                 "consumes": [
@@ -217,7 +217,7 @@
                 }
             }
         },
-        "/api/notes": {
+        "/notes": {
             "get": {
                 "description": "Возвращает список всех заметок",
                 "produces": [
@@ -281,7 +281,7 @@
                 }
             }
         },
-        "/api/notes/{id}": {
+        "/notes/{id}": {
             "get": {
                 "description": "Возвращает заметку по указанному ID",
                 "produces": [
@@ -415,7 +415,7 @@
                 }
             }
         },
-        "/api/users": {
+        "/users": {
             "get": {
                 "description": "Возвращает список всех пользователей",
                 "produces": [
@@ -479,7 +479,7 @@
                 }
             }
         },
-        "/api/users/{id}": {
+        "/users/{id}": {
             "get": {
                 "description": "Возвращает пользователя по указанному ID",
                 "produces": [
